[metadata]
name = osu.py
version = 0.1.3
author = Sheepposu
author_email = osuapi.py@gmail.com
description = Easy to use API wrapper for osu!api written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sheepposu/osu.py
project_urls =
    Bug Tracker = https://github.com/Sheepposu/osu.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src