[metadata]
name = osu.py
version = 0.1.5
author = Sheepposu
author_email = osuapi.py@gmail.com
description = Easy to use API wrapper for osu!api written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sheepposu/osu.py
project_urls =
    Bug Tracker = https://github.com/Sheepposu/osu.py/issues
    osu.py Documentation = https://osupy.readthedocs.io/en/latest/
    osu!api v2 Documentation = https://osu.ppy.sh/docs/index.html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src